Login and preview fix
Overlaping button in login, and height 100% in preview fixed.

--- a/actions/prevdoc/resources/css/prevdoc.css
+++ b/actions/prevdoc/resources/css/prevdoc.css
@@ -24,11 +24,6 @@
  */
 
 
-.content_container.prevdoc{
-	height: calc(100% - 3.5em);
-	overflow: scroll;
-}
-
 .prevdoc-channel-selector{
 	padding: 0 .7em;
 }
